# The-Ledger

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  FINAL_SUBMISSION_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: inspect_seed_facts.py  inspect_state.py  query_compliance_projection.py  setup_db.py  test_connect.py  try_ports.py  tune_seed_facts.py
src/: __init__.py  event_store.py  schema.sql
src/agents/: __init__.py  gemini_decision_agent.py  policy_limits.py
src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: __init__.py  handlers.py  models.py
src/integrity/: __init__.py  audit_chain.py  gas_town.py
src/mcp/: __init__.py  resources.py  server.py  specs.py  tools.py
src/models/: __init__.py  events.py
src/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py  rebuild.py
src/ui/: server.py
src/upcasting/: __init__.py  registry.py  upcasters.py
tests/: conftest.py  test_concurrency.py  test_domain_aggregates.py  test_phase2_handlers.py
tests/phase3/: test_projection_load_slo.py  test_projections_daemon.py
tests/phase4/: test_audit_chain.py  test_gas_town.py  test_upcasting.py
tests/phase5/: test_mcp_gemini_fallback.py  test_mcp_lifecycle.py
